# mev-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  book.toml  config.toml  example.config.toml  flake.nix  justfile  rustfmt.toml  shell.nix  test.sh  update-git-dep.sh
.github/workflows/: book.yml  ci.yml  docker.yml  release.yml  rust.yml
book/: SUMMARY.md  introduction.md  mev-boost-rs.md  mev-build-rs.md
mev-boost-rs/: Cargo.toml  README.md
mev-boost-rs/benches/: relay.rs
mev-boost-rs/examples/: mergemock.rs
mev-boost-rs/src/: config.rs  lib.rs  metrics.rs  relay.rs  relay_entry.rs  relay_mux.rs  relay_struct.rs  service.rs
mev-boost-rs/tests/: identity_builder.rs  integration.rs
mev-build-rs/: Cargo.toml
mev-build-rs/src/: auction_schedule.rs  auctioneer.rs  bidder.rs  builder.rs  builder_api_server.rs  client.rs  compat.rs  engine_builder.rs  error.rs  lib.rs  mempool_builder.rs  node.rs  null_builder.rs  serde.rs  service.rs  signing.rs  types.rs
mev-build-rs/src/auctioneer/: auction_schedule.rs  mod.rs  service.rs
mev-build-rs/src/bidder/: mod.rs  service.rs
mev-build-rs/src/bidder/strategies/: basic.rs  deadline.rs  mod.rs
mev-build-rs/src/blinded_block_provider/: mod.rs
mev-build-rs/src/blinded_block_provider/api/: client.rs  server.rs
mev-build-rs/src/builder/: engine_builder.rs  engine_proxy.rs  error.rs  mock_builder.rs  mod.rs  null_builder.rs  proposer_scheduler.rs
mev-build-rs/src/payload/: attributes.rs  builder.rs  builder_attributes.rs  job.rs  job_generator.rs  mod.rs  resolve.rs  service_builder.rs
mev-build-rs/src/reth_builder/: auction_schedule.rs  bidder.rs  build.rs  builder.rs  cancelled.rs  error.rs  mod.rs  payload_builder.rs  payload_builder_ext.rs  reth_compat.rs  reth_ext.rs  service.rs  service_ext.rs  types.rs
mev-build-rs/src/types/: bellatrix.rs  capella.rs  mod.rs
mev-build-rs/src/utils/: compat.rs  mod.rs  payload_job.rs
mev-build-rs/src/validator_registration/: mod.rs  validator_registrar.rs
mev-lib/: Cargo.toml
mev-lib/src/: lib.rs  serde.rs  signing.rs  types.rs
mev-lib/src/blinded_block_provider/: mod.rs
mev-lib/src/blinded_block_provider/api/: client.rs  server.rs
mev-lib/src/types/: capella.rs  mod.rs
mev-relay-rs/: Cargo.toml
mev-relay-rs/src/: auction_context.rs  client.rs  lib.rs  payload_verifier.rs  relay.rs  reth_cli_ext.rs  service.rs  types.rs  validator_summary_provider.rs
mev-relay-rs/src/rpc/: mod.rs  result.rs  types.rs
mev-rs/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
mev-rs/benches/: registry.rs
mev-rs/src/: bid_submission_processor.rs  block_validation.rs  boost.rs  build.rs  builder_registry.rs  config.rs  error.rs  genesis.rs  lib.rs  main.rs  network.rs  proposer_scheduler.rs  relay.rs  serde.rs  signing.rs  test_utils.rs  transaction_injector.rs  validator_registry.rs
mev-rs/src/blinded_block_provider/: mod.rs
mev-rs/src/blinded_block_provider/api/: client.rs  server.rs
mev-rs/src/blinded_block_relayer/: mod.rs
mev-rs/src/blinded_block_relayer/api/: client.rs  server.rs
mev-rs/src/engine_api_proxy/: client.rs  mod.rs  server.rs  types.rs
mev-rs/src/types/: auction_contents.rs  auction_request.rs  bellatrix.rs  bid_request.rs  block_submission.rs  builder_bid.rs  capella.rs  deneb.rs  mod.rs  proposer_schedule.rs
mev-rs/src/validator_registration/: mod.rs  validator_registrar.rs
nix/: mev-rs.nix  mev.nix  module-test.nix  module.nix
src/: builder.rs  builder_api.rs  builder_api_client.rs  builder_api_server.rs  json_rpc_server.rs  lib.rs  relay.rs  relay_mux.rs  relay_server.rs  service.rs  types.rs
tests/: integration.rs
