[workspace]
resolver = "2"
members = [
    "bin/mev",
    "bin/utils",
    "mev-boost-rs",
    "mev-relay-rs",
    "mev-build-rs",
    "mev-rs",
]
default-members = ["bin/mev"]

[workspace.package]
version = "0.3.0"

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404043230559660810bc0c9d6d5a8498d819" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404043230559660810bc0c9d6d5a8498d819" }

reth = { git = "https://github.com/paradigmxyz/reth" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
alloy-eips = "0.4.0"
alloy-consensus = { version = "0.4.0", default-features = false }
alloy-signer = "0.3.0"
alloy-signer-local = "0.3.0"

c-kzg = "2.0.0"

futures = "0.3.21"
tokio = "1.0"
tokio-stream = "0.1.15"
axum = "0.6.4"
hyper = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
http = "0.2.7"
url = { version = "2.2.2", default-features = false }

serde_json = "1.0.92"
async-trait = "0.1.53"
serde = "1.0"
thiserror = "1.0.30"
parking_lot = "0.12.1"
toml = "0.8.2"

rayon = "1.8.0"

pin-project = "1.0.12"
backoff = "0.4.0"

eyre = "0.6.8"
futures-util = "0.3.30"
sha2 = "0.10.8"
rand = "0.8.5"

clap = "4.1.4"

[patch.crates-io]
libffi-sys = { git = "https://github.com/tov/libffi-rs", rev = "d0704d634b6f3ffef5b6fc7e07fe965a1cff5c7b" }
