[workspace]
resolver = "2"
members = [
    "bin/mev",
    "bin/utils",
    "mev-boost-rs",
    "mev-relay-rs",
    "mev-build-rs",
    "mev-rs",
]
default-members = ["bin/mev"]

[workspace.package]
version = "0.3.0"

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "3068ca2bab27c39a5a409dcd359e46319d82c431" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "3068ca2bab27c39a5a409dcd359e46319d82c431" }

reth = { git = "https://github.com/paradigmxyz/reth", rev = "3736d8f9aa7c5cf46edc1e5d1dbd9dcf6f50b9c9" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", rev = "3736d8f9aa7c5cf46edc1e5d1dbd9dcf6f50b9c9" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "3736d8f9aa7c5cf46edc1e5d1dbd9dcf6f50b9c9" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "3736d8f9aa7c5cf46edc1e5d1dbd9dcf6f50b9c9" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "3736d8f9aa7c5cf46edc1e5d1dbd9dcf6f50b9c9" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "3736d8f9aa7c5cf46edc1e5d1dbd9dcf6f50b9c9" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "07611cf" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "07611cf" }

# revm
revm = { version = "9.0.0", features = [
    "std",
    "secp256k1",
], default-features = false }
revm-primitives = { version = "4.0.0", features = [
    "std",
], default-features = false }
revm-interpreter = { version = "5.0.0", features = [
    "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "3215ff5" }

futures = "0.3.21"
tokio = "1.0"
tokio-stream = "0.1.15"
axum = "0.6.4"
hyper = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
http = "0.2.7"
url = { version = "2.2.2", default-features = false }

serde_json = "1.0.92"
async-trait = "0.1.53"
serde = "1.0"
thiserror = "1.0.30"
parking_lot = "0.12.1"
toml = "0.8.2"

rayon = "1.8.0"

pin-project = "1.0.12"
backoff = "0.4.0"

eyre = "0.6.8"
futures-util = "0.3.30"
sha2 = "0.10.8"
rand = "0.8.5"

clap = "4.1.4"

[patch.crates-io]
libffi-sys = { git = "https://github.com/tov/libffi-rs", rev = "d0704d634b6f3ffef5b6fc7e07fe965a1cff5c7b" }
revm = { git = "https://github.com/bluealloy/revm", rev = "276cdfb" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "276cdfb" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "276cdfb" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "276cdfb" }
