[package]
name = "mev-boost-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
futures = "0.3.21"
async-trait = "0.1.53"
pin-project = "1.0.12"
rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
parking_lot = "0.12.1"

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

mev-rs = { path = "../mev-rs" }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2.2", default-features = false }
serde_json = "1.0.81"
mev-build-rs = { path = "../mev-build-rs" }
mev-relay-rs = { path = "../mev-relay-rs" }
