[package]
name = "mev-boost-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# enable to use `minimal` preset instead of `mainnet`
minimal-preset = [
    "mev-rs/minimal-preset",
    "mev-build-rs/minimal-preset",
    "mev-relay-rs/minimal-preset",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
async-trait = "0.1.53"
pin-project = "1.0.12"
rand = "0.8.5"
futures-util = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
parking_lot = "0.12.1"

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

mev-rs = { path = "../mev-rs" }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2.2", default-features = false }
serde_json = "1.0.81"
mev-build-rs = { path = "../mev-build-rs" }
mev-relay-rs = { path = "../mev-relay-rs" }
