[package]
name = "mev-boost-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# enable to use `minimal` preset instead of `mainnet`
minimal-preset = [
    "mev-rs/minimal-preset",
    "mev-build-rs/minimal-preset",
    "mev-relay-rs/minimal-preset",
]

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
async-trait = { workspace = true }
pin-project = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
parking_lot = { workspace = true }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

mev-rs = { path = "../mev-rs" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2.2", default-features = false }
serde_json = "1.0.81"
mev-build-rs = { path = "../mev-build-rs" }
mev-relay-rs = { path = "../mev-relay-rs" }
