[package]
name = "mev-build-rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1"
futures = "0.3.21"
async-trait = "0.1.53"
parking_lot = "0.12.1"
pin-project = "1.0.12"

thiserror = "1.0.30"
url = { version = "2.2.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }
ssz_rs = { workspace = true }

mev-rs = { path = "../mev-rs" }

revm = { workspace = true }
reth-payload-builder = { workspace = true }
reth-primitives = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-provider = { workspace = true }
reth-interfaces = { workspace = true }
reth-revm = { workspace = true }

ethers = "2.0"
