[package]
name = "mev-build-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1"
async-trait = "0.1.53"
pin-project = "1.0.12"
futures-util = { workspace = true }

thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

mev-rs = { path = "../mev-rs" }

reth = { workspace = true }
reth-db = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }

ethers = "2.0"
eyre = { workspace = true }
clap = { version = "4.1.4", features = ["derive", "env"] }
