[package]
name = "mev-build-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# enable to use `minimal` preset instead of `mainnet`
minimal-preset = ["mev-rs/minimal-preset"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
pin-project = { workspace = true }
futures-util = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

mev-rs = { path = "../mev-rs" }

reth = { workspace = true }
reth-interfaces = { workspace = true }
reth-db = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-basic-payload-builder = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-wallet = { workspace = true, features = ["mnemonic"] }

sha2 = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
