[package]
name = "mev-lib"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "api"]
api = ["tokio", "axum", "hyper","beacon-api-client", "tracing"]

[dependencies]
tokio = { version = "1.0", optional = true }
axum = { version =  "0.5.4", optional = true }
hyper = { version = "0.14", optional = true }
tracing = { version = "0.1", optional = true }

async-trait = "0.1.53"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.30"

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client", optional = true }
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs" }
