[package]
name = "mev-relay-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
futures = "0.3.21"
async-trait = "0.1.73"
parking_lot = "0.12.1"
pin-project = "1.0.12"

thiserror = "1.0.30"
http = "0.2.7"
url = { version = "2.2.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

revm = { workspace = true }
reth-revm = { workspace = true }
reth = { workspace = true }

serde_json = "1.0.107"
serde_with = "3.3.0"
jsonrpsee = "0.20.1"
derivative = "2.2.0"
hex = "0.4.3"

eyre = { workspace = true }
clap = { version = "4.1.4", features = ["derive", "env"] }
mev-rs = { path = "../mev-rs" }
