[package]
name = "mev-relay-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# enable to use `minimal` preset instead of `mainnet`
minimal-preset = ["mev-rs/minimal-preset"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }

thiserror = { workspace = true }
url = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
http = { workspace = true }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true }

mev-rs = { path = "../mev-rs" }
