[package]
name = "mev-rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "api", "engine-proxy"]
api = ["tokio", "axum", "hyper", "beacon-api-client", "tracing", "serde_json"]
engine-proxy = ["serde", "api", "anvil-rpc", "reqwest", "serde_json"]

[dependencies]
tokio = { version = "1.0", optional = true }
axum = { version =  "0.6.4", optional = true }
hyper = { version = "0.14", optional = true }
tracing = { version = "0.1", optional = true }

async-trait = "0.1.53"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.30"
parking_lot = "0.12.1"

anvil-rpc = { git = "https://github.com/foundry-rs/foundry", rev = "b45456717ffae1af65acdc71099f8cb95e6683a0", optional = true}
reqwest = { version = "0.11.14", optional = true }
serde_json = {version =  "1.0.92", optional = true }

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus" }
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client", optional = true }
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs" }
