[package]
name = "mev-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "builder-api", "relay-api"]
builder-api = ["api"]
relay-api = ["api", "builder-api"]
api = ["tokio", "axum", "hyper", "beacon-api-client", "tracing", "serde_json"]

[dependencies]
tokio = { version = "1.0", optional = true }
axum = { version = "0.6.4", optional = true }
hyper = { version = "0.14", optional = true }
tracing = { version = "0.1", optional = true }

async-trait = "0.1.53"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.30"
parking_lot = "0.12.1"
url = { version = "2.2.2", default-features = false }

serde_json = { version = "1.0.92", optional = true }
toml = "0.8.2"

rayon = "1.8.0"

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8.5"
