[package]
name = "mev-rs"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "builder-api", "relay-api"]
builder-api = ["api"]
relay-api = ["api", "builder-api"]
api = ["tokio", "axum", "hyper", "beacon-api-client", "tracing", "serde_json"]
# enable to use `minimal` preset instead of `mainnet`
minimal-preset = []

[dependencies]
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }

serde_json = { workspace = true, optional = true }
toml = { workspace = true }

rayon = { workspace = true }

ethereum-consensus = { workspace = true }
beacon-api-client = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8.5"
